{object} => {Object}, {function} => {Function}

--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -175,7 +175,7 @@ changes to the API or wire format) may occur until this warning is removed.
 added: v8.0.0
 -->
 
-* `value` {object}
+* `value` {Object}
 * Returns: {Buffer}
 
 Uses a [`DefaultSerializer`][] to serialize `value` into a buffer.
@@ -204,7 +204,7 @@ Writes out a header, which includes the serialization format version.
 
 #### serializer.writeValue(value)
 
-* `value` {object}
+* `value` {Object}
 
 Serializes a JavaScript value and adds the serialized representation to the
 internal buffer.
