address GitHub comments

--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -175,7 +175,7 @@ changes to the API or wire format) may occur until this warning is removed.
 added: v8.0.0
 -->
 
-* `value` {Object}
+* `value` {any}
 * Returns: {Buffer}
 
 Uses a [`DefaultSerializer`][] to serialize `value` into a buffer.
