address more comments

--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -204,7 +204,7 @@ Writes out a header, which includes the serialization format version.
 
 #### serializer.writeValue(value)
 
-* `value` {Object}
+* `value` {any}
 
 Serializes a JavaScript value and adds the serialized representation to the
 internal buffer.
