--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -37,7 +37,7 @@ changes:
 Returns statistics about the V8 heap spaces, i.e. the segments which make up
 the V8 heap. Neither the ordering of heap spaces, nor the availability of a
 heap space can be guaranteed as the statistics are provided via the V8
-[`GetHeapSpaceStatistics`][] function and may change from one V8 version to the
+[`GetHeapSpaceStatistics`](https://v8docs.nodesource.com/node-8.11/d2/d03/classv8_1_1_heap_space_statistics.html) function and may change from one V8 version to the
 next.
 
 The value returned is an array of objects containing the following properties:
