--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -37,7 +37,7 @@ changes:
 Returns statistics about the V8 heap spaces, i.e. the segments which make up
 the V8 heap. Neither the ordering of heap spaces, nor the availability of a
 heap space can be guaranteed as the statistics are provided via the V8
-[`GetHeapSpaceStatistics`](https://v8docs.nodesource.com/node-8.11/d2/d03/classv8_1_1_heap_space_statistics.html) function and may change from one V8 version to the
+[`GetHeapSpaceStatistics`][] function and may change from one V8 version to the
 next.
 
 The value returned is an array of objects containing the following properties:
@@ -417,4 +417,4 @@ A subclass of [`Deserializer`][] corresponding to the format written by
 [V8]: https://developers.google.com/v8/
 [`vm.Script`]: vm.html#vm_new_vm_script_code_options
 [here]: https://github.com/thlorenz/v8-flags/blob/master/flags-0.11.md
-[`GetHeapSpaceStatistics`]: https://v8docs.nodesource.com/node-8.9/d5/dda/classv8_1_1_isolate.html#ac673576f24fdc7a33378f8f57e1d13a4
+[`GetHeapSpaceStatistics`]: https://v8docs.nodesource.com/node-10.6/d5/dda/classv8_1_1_isolate.html#ac673576f24fdc7a33378f8f57e1d13a4
