module: allowed module location list
Adds --allowed-module-location option that can be used to limit the
paths Node.js is allowed to load modules from.

Fixes: https://github.com/nodejs/node/issues/34124

--- a/doc/node.1
+++ b/doc/node.1
@@ -72,6 +72,9 @@ Pass the rest of the arguments to the script.
 If no script filename or eval/print script is supplied prior to this, then
 the next argument will be used as a script filename.
 .
+.If Fl -allowed-module-list
+Set allowed locations from which modules can be loaded (option can be repeated).
+.
 .It Fl -abort-on-uncaught-exception
 Aborting instead of exiting causes a core file to be generated for analysis.
 .
