--- a/doc/node.1
+++ b/doc/node.1
@@ -78,7 +78,7 @@ Aborting instead of exiting causes a core file to be generated for analysis.
 .It Fl -completion-bash
 Print source-able bash completion script for Node.js.
 .
-.It Fl m , Fl -conditions Ar string
+.It Fl u , Fl -conditions Ar string
 Use custom conditional exports conditions
 .Ar string
 .
