--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -503,6 +503,36 @@ added: v8.0.0
 A subclass of [`Deserializer`][] corresponding to the format written by
 [`DefaultSerializer`][].
 
+## `v8.emitCodeGenFromStringEvent()`
+<!-- YAML
+added: REPLACEME
+-->
+
+After this methode is called, calling `eval(code)` or `new Function(code)`
+will emit a `codeGenerationFromString` event on `process` with the value
+of `code`. The call to `eval` or `new Function` will happen after the
+event is emitted.
+
+Calls made through the `vm` module will not emit the event.
+
+Calling `v8.emitCodeGenFromStringEvent()` when the
+`--disallow-code-generation-from-strings` flag is used will be a noop.
+
+```js
+const v8 = require('v8');
+v8.emitCodeGenFromStringEvent();
+process.on('codeGenerationFromString', (code) => {
+  console.log('Generating code from string`', code, '`');
+});
+const item = { foo: 0 };
+eval('item.foo++');
+```
+
+will log
+```text
+Generating code from string` item.foo++ `
+```
+
 [`Buffer`]: buffer.html
 [`DefaultDeserializer`]: #v8_class_v8_defaultdeserializer
 [`DefaultSerializer`]: #v8_class_v8_defaultserializer
