--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -513,7 +513,7 @@ will emit a `codeGenerationFromString` event on `process` with the value
 of `code`. The call to `eval` or `new Function` will happen after the
 event is emitted.
 
-Calls made through the `vm` module will not emit the event.
+Calls to the `vm` module such as `vm.runInContext` will not emit the event.
 
 Calling `v8.emitCodeGenFromStringEvent()` when the
 `--disallow-code-generation-from-strings` flag is used will be a noop.
