--- a/doc/node.1
+++ b/doc/node.1
@@ -170,6 +170,9 @@ Enable experimental WebAssembly System Interface support.
 .It Fl -experimental-wasm-modules
 Enable experimental WebAssembly module support.
 .
+.It Fl -experimental-wasm-threads
+Enable experimental WebAssembly worker-based thread support with shared memory.
+.
 .It Fl -force-context-aware
 Disable loading native addons that are not context-aware.
 .
