fixup! v8: implement v8.queryObjects() for memory leak regression testing
Co-authored-by: Stephen Belanger <admin@stephenbelanger.com>

--- a/doc/api/v8.md
+++ b/doc/api/v8.md
@@ -272,7 +272,7 @@ found. If `options.format` is `'summary'`, it returns an array
 containing brief string representations for each object. The visibility
 provided in this API is similar to what the heap snapshot provides,
 while users can save the cost of serialization and parsing and directly
-filer the target objects during the search.
+filter the target objects during the search.
 
 Only objects created in the current execution context are included in the
 results.
