repl: integrate experimental repl

--- a/doc/node.1
+++ b/doc/node.1
@@ -177,6 +177,9 @@ Enable the experimental permission model.
 .It Fl -experimental-policy
 Use the specified file as a security policy.
 .
+.It Fl -experimental-repl
+Use the experimental REPL.
+.
 .It Fl -experimental-shadow-realm
 Use this flag to enable ShadowRealm support.
 .
