--- a/doc/node.1
+++ b/doc/node.1
@@ -767,7 +767,7 @@ See
 for the full license text.
 .
 .\"======================================================================
-.SH SEE ALSO
+.Sh SEE ALSO
 Website:
 .Sy https://nodejs.org/
 .
